crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__netbox-community-netbox__ee6cbdcefe1c522d718e880ea3f955e7683f2b9b__netbox__utilities__templatetags__buttons.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/netbox-community-netbox/ee6cbdcefe1c522d718e880ea3f955e7683f2b9b/netbox/utilities/templatetags/buttons.py
---
tag_rules:
  "netbox.utilities.templatetags.buttons::action_buttons":
    arg_constraints:
      - Min: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: actions
        required: true
        kind: Variable
        position: 0
      - name: obj
        required: true
        kind: Variable
        position: 1
      - name: multi
        required: false
        kind: Variable
        position: 2
    supports_as_var: true
  "netbox.utilities.templatetags.buttons::add_button":
    arg_constraints:
      - Min: 2
      - Max: 4
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: model
        required: true
        kind: Variable
        position: 0
      - name: action
        required: false
        kind: Variable
        position: 1
      - name: return_url
        required: false
        kind: Variable
        position: 2
    supports_as_var: false
  "netbox.utilities.templatetags.buttons::bookmark_button":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: instance
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "netbox.utilities.templatetags.buttons::bulk_delete_button":
    arg_constraints:
      - Min: 2
      - Max: 4
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: model
        required: true
        kind: Variable
        position: 0
      - name: action
        required: false
        kind: Variable
        position: 1
      - name: query_params
        required: false
        kind: Variable
        position: 2
    supports_as_var: false
  "netbox.utilities.templatetags.buttons::bulk_edit_button":
    arg_constraints:
      - Min: 2
      - Max: 4
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: model
        required: true
        kind: Variable
        position: 0
      - name: action
        required: false
        kind: Variable
        position: 1
      - name: query_params
        required: false
        kind: Variable
        position: 2
    supports_as_var: false
  "netbox.utilities.templatetags.buttons::clone_button":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: instance
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "netbox.utilities.templatetags.buttons::delete_button":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: instance
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "netbox.utilities.templatetags.buttons::edit_button":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: instance
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "netbox.utilities.templatetags.buttons::export_button":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: model
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "netbox.utilities.templatetags.buttons::import_button":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: model
        required: true
        kind: Variable
        position: 0
      - name: action
        required: false
        kind: Variable
        position: 1
    supports_as_var: false
  "netbox.utilities.templatetags.buttons::subscribe_button":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: instance
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "netbox.utilities.templatetags.buttons::sync_button":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: instance
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
filter_arities: {}
block_specs: {}
