crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__netbox-community-netbox__ee6cbdcefe1c522d718e880ea3f955e7683f2b9b__netbox__utilities__templatetags__navigation.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/netbox-community-netbox/ee6cbdcefe1c522d718e880ea3f955e7683f2b9b/netbox/utilities/templatetags/navigation.py
---
tag_rules:
  "netbox.utilities.templatetags.navigation::tag::nav":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
filter_arities: {}
block_specs: {}
